# ai_application_practice

./: .env.example  CLAUDE.md  PROJECT3_GITHUB_PR_FEATURE_COMPLETE.md  PROJECT3_GITHUB_PR_UPDATE.md  PROJECT3_SUMMARY.md  README.md  career_directions.md  example_code_with_issues.py  requirements.txt
doc/: claude_usage.md  learning_roadmap.md  practice_projects.md
project1_cli_assistant/: pyproject.toml
project1_cli_assistant/assistant/: agent.py  main.py  tools.py
project2_web_summarizer/: pyproject.toml
project2_web_summarizer/summarizer/: agent.py  main.py  tools.py
project3_code_review_bot/: DEMO.sh  GITHUB_PR_REVIEW.md  INTEGRATION.md  QUICKSTART.md  README.md  pyproject.toml
project3_code_review_bot/code_reviewer/: __init__.py  agent.py  main.py  tools.py
shared_agent/: __init__.py  tool_loop.py
